// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColumnHeaderCell renders a column header cell with ascending sort 1`] = `
<th
  aria-sort="ascending"
  className="column-header selectable"
  key="Column-0"
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseDown={null}
  role="columnheader"
  scope="col"
  style={
    Object {
      "height": "150px",
      "left": null,
      "width": "100px",
    }
  }
  tabIndex={-1}
>
  <div
    className="header-container"
    role="button"
    tabIndex="-1"
  >
    <span>
       Vitals
    </span>
    <IconUp
      data-name="Layer 1"
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    />
  </div>
  <InjectIntl(ColumnResizeHandle)
    columnIndex={0}
    columnText=" Vitals"
    columnWidth={100}
    isActive={false}
    onResizeMouseDown={[Function]}
    onResizeMouseUp={[Function]}
  />
</th>
`;

exports[`ColumnHeaderCell renders a column header cell with ascending sort and error 1`] = `
<th
  aria-sort="ascending"
  className="column-header selectable"
  key="Column-0"
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseDown={null}
  role="columnheader"
  scope="col"
  style={
    Object {
      "height": "150px",
      "left": null,
      "width": "100px",
    }
  }
  tabIndex={-1}
>
  <div
    className="header-container"
    role="button"
    tabIndex="-1"
  >
    <IconError
      a11yLabel="Terra.dataGrid.columnError"
      className="error-icon"
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    />
    <span>
       Vitals
    </span>
    <IconUp
      data-name="Layer 1"
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    />
  </div>
  <InjectIntl(ColumnResizeHandle)
    columnIndex={0}
    columnText=" Vitals"
    columnWidth={100}
    isActive={false}
    onResizeMouseDown={[Function]}
    onResizeMouseUp={[Function]}
  />
</th>
`;

exports[`ColumnHeaderCell renders a column header cell with descending sort 1`] = `
<th
  aria-sort="descending"
  className="column-header selectable"
  key="Column-0"
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseDown={null}
  role="columnheader"
  scope="col"
  style={
    Object {
      "height": "150px",
      "left": null,
      "width": "100px",
    }
  }
  tabIndex={-1}
>
  <div
    className="header-container"
    role="button"
    tabIndex="-1"
  >
    <span>
       Vitals
    </span>
    <IconDown
      data-name="Layer 1"
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    />
  </div>
  <InjectIntl(ColumnResizeHandle)
    columnIndex={0}
    columnText=" Vitals"
    columnWidth={100}
    isActive={false}
    onResizeMouseDown={[Function]}
    onResizeMouseUp={[Function]}
  />
</th>
`;

exports[`ColumnHeaderCell renders a column header cell with error 1`] = `
<th
  className="column-header selectable"
  key="Column-0"
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseDown={null}
  role="columnheader"
  scope="col"
  style={
    Object {
      "height": "150px",
      "left": null,
      "width": "100px",
    }
  }
  tabIndex={-1}
>
  <div
    className="header-container"
    role="button"
    tabIndex="-1"
  >
    <IconError
      a11yLabel="Terra.dataGrid.columnError"
      className="error-icon"
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    />
    <span>
       Vitals
    </span>
  </div>
  <InjectIntl(ColumnResizeHandle)
    columnIndex={0}
    columnText=" Vitals"
    columnWidth={100}
    isActive={false}
    onResizeMouseDown={[Function]}
    onResizeMouseUp={[Function]}
  />
</th>
`;

exports[`ColumnHeaderCell renders a column header cell with onColumnSelect callback 1`] = `
<th
  aria-sort="ascending"
  className="column-header selectable"
  key="Column-0"
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  role="columnheader"
  scope="col"
  style={
    Object {
      "height": "150px",
      "left": null,
      "width": "100px",
    }
  }
  tabIndex={-1}
>
  <div
    className="header-container"
    role="button"
    tabIndex="-1"
  >
    <IconError
      a11yLabel="Terra.dataGrid.columnError"
      className="error-icon"
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    />
    <span>
       Vitals
    </span>
    <IconUp
      data-name="Layer 1"
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    />
  </div>
  <InjectIntl(ColumnResizeHandle)
    columnIndex={0}
    columnText=" Vitals"
    columnWidth={100}
    isActive={false}
    onResizeMouseDown={[Function]}
    onResizeMouseUp={[Function]}
  />
</th>
`;

exports[`ColumnHeaderCell renders a column header cell with onColumnSelect callback but not selectable 1`] = `
<th
  aria-sort="ascending"
  className="column-header"
  key="Column-0"
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  role="columnheader"
  scope="col"
  style={
    Object {
      "height": "150px",
      "left": null,
      "width": "100px",
    }
  }
  tabIndex={-1}
>
  <div
    className="header-container"
    role="button"
    tabIndex="-1"
  >
    <IconError
      a11yLabel="Terra.dataGrid.columnError"
      className="error-icon"
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    />
    <span>
       Vitals
    </span>
    <IconUp
      data-name="Layer 1"
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    />
  </div>
  <InjectIntl(ColumnResizeHandle)
    columnIndex={0}
    columnText=" Vitals"
    columnWidth={100}
    isActive={false}
    onResizeMouseDown={[Function]}
    onResizeMouseUp={[Function]}
  />
</th>
`;

exports[`ColumnHeaderCell renders a default column header cell 1`] = `
<th
  className="column-header selectable"
  key="Column-0"
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseDown={null}
  role="columnheader"
  scope="col"
  style={
    Object {
      "height": "150px",
      "left": null,
      "width": "100px",
    }
  }
  tabIndex={-1}
>
  <div
    className="header-container"
    role="button"
    tabIndex="-1"
  >
    <span>
       Vitals
    </span>
  </div>
  <InjectIntl(ColumnResizeHandle)
    columnIndex={0}
    columnText=" Vitals"
    columnWidth={100}
    isActive={false}
    onResizeMouseDown={[Function]}
    onResizeMouseUp={[Function]}
  />
</th>
`;

exports[`ColumnHeaderCell renders a pinned column header cell 1`] = `
<InjectIntl(ColumnHeaderCell)
  columnIndex={0}
  displayName=" Vitals"
  hasError={true}
  headerHeight="150px"
  id="Column-0"
  sortIndicator="ascending"
  width={100}
>
  <ColumnHeaderCell
    columnIndex={0}
    displayName=" Vitals"
    hasError={true}
    headerHeight="150px"
    id="Column-0"
    intl={
      Object {
        "defaultFormats": Object {},
        "defaultLocale": "en",
        "formatDate": [Function],
        "formatHTMLMessage": [Function],
        "formatMessage": [Function],
        "formatNumber": [Function],
        "formatPlural": [Function],
        "formatRelative": [Function],
        "formatTime": [Function],
        "formats": Object {},
        "formatters": Object {
          "getDateTimeFormat": [Function],
          "getMessageFormat": [Function],
          "getNumberFormat": [Function],
          "getPluralFormat": [Function],
          "getRelativeFormat": [Function],
        },
        "locale": "en",
        "messages": null,
        "now": [Function],
        "onError": [Function],
        "textComponent": "span",
        "timeZone": null,
      }
    }
    isActive={false}
    isResizable={true}
    isResizeActive={false}
    isSelectable={true}
    sortIndicator="ascending"
    width={100}
  >
    <th
      aria-sort="ascending"
      className="column-header selectable pinned"
      key="Column-0"
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={null}
      role="columnheader"
      scope="col"
      style={
        Object {
          "height": "150px",
          "left": 0,
          "width": "100px",
        }
      }
      tabIndex={-1}
    >
      <div
        className="header-container"
        role="button"
        tabIndex="-1"
      >
        <IconError
          a11yLabel="Terra.dataGrid.columnError"
          className="error-icon"
          viewBox="0 0 48 48"
          xmlns="http://www.w3.org/2000/svg"
        >
          <IconBase
            a11yLabel="Terra.dataGrid.columnError"
            className="IconError error-icon"
            focusable="false"
            height="1em"
            isBidi={false}
            isSpin={false}
            viewBox="0 0 48 48"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <svg
              className="tui-Icon icon IconError error-icon"
              focusable="false"
              height="1em"
              viewBox="0 0 48 48"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                Terra.dataGrid.columnError
              </title>
              <path
                d="M24 0c13.3 0 24 10.7 24 24S37.3 48 24 48 0 37.3 0 24C0 10.8 10.7 0 23.9 0h.1z"
                fill="#E50000"
              />
              <path
                d="M7 21.5h34v5H7v-5z"
                fill="#FFF"
              />
            </svg>
          </IconBase>
        </IconError>
        <span>
           Vitals
        </span>
        <IconUp
          data-name="Layer 1"
          viewBox="0 0 48 48"
          xmlns="http://www.w3.org/2000/svg"
        >
          <IconBase
            data-name="Layer 1"
            focusable="false"
            height="1em"
            isBidi={false}
            isSpin={false}
            viewBox="0 0 48 48"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <svg
              className="tui-Icon icon"
              data-name="Layer 1"
              focusable="false"
              height="1em"
              role="presentation"
              viewBox="0 0 48 48"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M24 0 .1 23.5l3.8 3.8L21 10.6V48h6V10.6l17.1 16.7 3.8-3.8z"
              />
            </svg>
          </IconBase>
        </IconUp>
      </div>
      <InjectIntl(ColumnResizeHandle)
        columnIndex={0}
        columnText=" Vitals"
        columnWidth={100}
        isActive={false}
        onResizeMouseDown={[Function]}
        onResizeMouseUp={[Function]}
      >
        <ColumnResizeHandle
          columnIndex={0}
          columnResizeIncrement={10}
          columnText=" Vitals"
          columnWidth={100}
          intl={
            Object {
              "defaultFormats": Object {},
              "defaultLocale": "en",
              "formatDate": [Function],
              "formatHTMLMessage": [Function],
              "formatMessage": [Function],
              "formatNumber": [Function],
              "formatPlural": [Function],
              "formatRelative": [Function],
              "formatTime": [Function],
              "formats": Object {},
              "formatters": Object {
                "getDateTimeFormat": [Function],
                "getMessageFormat": [Function],
                "getNumberFormat": [Function],
                "getPluralFormat": [Function],
                "getRelativeFormat": [Function],
              },
              "locale": "en",
              "messages": null,
              "now": [Function],
              "onError": [Function],
              "textComponent": "span",
              "timeZone": null,
            }
          }
          isActive={false}
          onResizeMouseDown={[Function]}
          onResizeMouseUp={[Function]}
        >
          <div
            aria-hidden={true}
            aria-label={null}
            aria-valuemax={null}
            aria-valuemin={null}
            aria-valuenow={null}
            aria-valuetext={null}
            className="resize-handle"
            draggable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            role={null}
            style={
              Object {
                "height": "undefinedpx",
              }
            }
            tabIndex={-1}
          />
        </ColumnResizeHandle>
      </InjectIntl(ColumnResizeHandle)>
      <div
        className="pinned-columns-divider"
        style={
          Object {
            "height": undefined,
            "left": 99,
          }
        }
      />
    </th>
  </ColumnHeaderCell>
</InjectIntl(ColumnHeaderCell)>
`;
